--- a/package.json
+++ b/package.json
@@ -15,4 +15,7 @@
   "bugs": {
     "url": "https://github.com/chrismgrant/chrismgrant.com/issues"
   }
+	"dependencies": {
+		"express": "3.4.8"
+	}
 }
